// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomList should match snapshot with FlatList 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  data={
    [
      {
        "username": "username_1",
      },
      {
        "username": "username_2",
      },
    ]
  }
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onLayout={[Function]}
  onScroll={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={60}
  stickySectionHeadersEnabled={true}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
/>
`;

exports[`CustomList should match snapshot with SectionList 1`] = `
<SectionList
  ItemSeparatorComponent={[Function]}
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  extraData={false}
  initialNumToRender={15}
  keyExtractor={[Function]}
  keyboardDismissMode="on-drag"
  keyboardShouldPersistTaps="always"
  maxToRenderPerBatch={16}
  onLayout={[Function]}
  onScroll={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={60}
  sections={
    [
      {
        "username": "username_1",
      },
      {
        "username": "username_2",
      },
    ]
  }
  stickySectionHeadersEnabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
/>
`;

exports[`CustomList should match snapshot, renderFooter 1`] = `null`;

exports[`CustomList should match snapshot, renderFooter 2`] = `<View />`;

exports[`CustomList should match snapshot, renderSectionHeader 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "rgba(63,67,80,0.07)",
        "paddingLeft": 10,
        "paddingVertical": 2,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "fontWeight": "600",
        }
      }
    >
      section_id
    </Text>
  </View>
</View>
`;

exports[`CustomList should match snapshot, renderSeparator 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(63,67,80,0.1)",
      "flex": 1,
      "height": 1,
    }
  }
/>
`;
